--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="Logo">
+    <img src="logo1.png" alt="Logo">
     <h1>Australia Government</h1>
   </header>
 
